# git-sweep-rs

./: Cargo.toml  README.fr.md  README.hi.md  README.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: release.yml
src/: cli.rs  git_ops.rs  main.rs
