[package]
name = "git-sweep-rs"
version = "1.0.0"
edition = "2021"
description = "A command-line tool to clean up merged Git branches"
license = "MIT"
repository = "https://github.com/leo-yi/git-sweep-rs"
keywords = ["git", "branch", "cleanup", "tool"]
categories = ["command-line-utilities", "development-tools"]

authors = ["Leo Yi <uyihoo@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
